Safari fixes :heavy_check_mark: - Closes #832, fixes help icon display - Closes #840, uses disabled class instead of disabled attribute so that hint hover state still active on reports when not active - Closes #842, uses translateZ(0) to fix flickering behavior on position fixed navbar condensing

--- a/src/app/map-tool/map/map/map.component.scss
+++ b/src/app/map-tool/map/map/map.component.scss
@@ -262,6 +262,8 @@ app-location-cards {
       width: 22px;
       height:22px;
       fill: $iconColor;
+      // Hack to prevent overflow on Safari
+      ::ng-deep { svg { height: inherit; } }
     }
   }
 }
